--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background-color: white;
     color: black;
     margin: 0 auto;
-    padding: 15px;
+    padding: 10px;
     max-width: 1200px;
     font-family: 'Poppins', sans-serif;
 }
@@ -12,7 +12,6 @@ body {
 .cabecalho .img-menu{
     margin-left: 30px;
     filter: drop-shadow(0px 5px 6px rgba(0, 0, 0, 0.30));
-
 }
 
 header {
@@ -21,18 +20,35 @@ header {
     justify-content: space-between;
     align-items: center;
     margin-right: -30px;
+
 }
 
 .navigation a{
     display: inline-block;
     list-style: none;
     text-decoration: none;
-    margin: 23px;
-    font-size: 17px;
+    margin: 30px;
+    font-size: 22px;
     font-weight: bold;
     color: black;
     filter: drop-shadow(0px 5px 6px rgba(0, 0, 0, 0.30));
+    margin-top: 10px;
 }
+
+.navigation a::after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 3px;
+	bottom: -5px;
+	left: 0;
+	background: transparent;
+	transition: background 0.3s ease;
+  }
+  
+  .navigation a:hover::after {
+	background: #000000;
+  }
 
 main {
     display: flex;
@@ -417,7 +433,7 @@ main {
 
 footer{
     background-color: #ffffff;
-    padding: 79px 0;
+    padding: 30px 0;
 }
 
 .container-footer{
@@ -450,7 +466,7 @@ footer{
 }
 
 .footer-col h4{
-    font-size: 26px;
+    font-size: 27px;
     color: black;
     margin-left: 39px;
     margin-bottom: 24px;
@@ -467,7 +483,7 @@ footer{
 }
 
 .footer-col ul li a{
-    font-size: 16px;
+    font-size: 17px;
     text-transform: capitalize;
     color: black;
     text-decoration: none;
@@ -475,7 +491,7 @@ footer{
 }
 
 .text-footer{
-    margin-top: -53px;
+    margin-top: -50px;
     text-align: justify;
     font-size: 10px;
     color: #757575;
